@@ -15,15 +15,6 @@
 #include "plan.h"
 #include "sort.h"
 
-static void planInitializeItemPriority( Plan *plan, int first, int last )
-{
-  int i;
-  for ( i = first ; i < last ; i++ )
-    plan->item[i] = EMPTY;
-  for ( i = first ; i < last ; i++ )
-    plan->priority[i] = 999.0;
-}
-
 Plan* planCreate( int max_size, int chunk_size )
 {
   Plan *plan;
@@ -34,10 +25,8 @@ Plan* planCreate( int max_size, int chunk_size )
   plan->max_size   = MAX(max_size,1);
   plan->chunk_size = MAX(chunk_size,1);
 
-
   plan->item     = (int *)   malloc( planMaxSize(plan)*sizeof(int) );
   plan->priority = (double *)malloc( planMaxSize(plan)*sizeof(double) );
-  planInitializeItemPriority( plan, 0, planMaxSize(plan) );
 
   return plan;
 }
@@ -66,7 +55,11 @@ Plan *planAddItemWithPriority( Plan *plan, int item, double priority )
 {
   int newitem;
   if (planSize(plan)>=planMaxSize(plan)){
-    realloc;
+    plan->max_size += plan->chunk_size;
+    plan->item     = (int *)   realloc(plan->item, 
+				       planMaxSize(plan)*sizeof(int) );
+    plan->priority = (double *)realloc(plan->priority, 
+				       planMaxSize(plan)*sizeof(double) );
   }
   if (NULL!=plan->ranking) {
     free(plan->ranking);
